@@ -1,11 +1,17 @@
 package org.qortal.api;
 
 import io.swagger.v3.jaxrs2.integration.resources.OpenApiResource;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.eclipse.jetty.alpn.server.ALPNServerConnectionFactory;
 import org.eclipse.jetty.http.HttpVersion;
+import org.eclipse.jetty.http2.HTTP2Cipher;
+import org.eclipse.jetty.http2.server.HTTP2ServerConnectionFactory;
 import org.eclipse.jetty.rewrite.handler.RedirectPatternRule;
 import org.eclipse.jetty.rewrite.handler.RewriteHandler;
 import org.eclipse.jetty.server.*;
 import org.eclipse.jetty.server.handler.ErrorHandler;
+import org.eclipse.jetty.util.component.LifeCycle;
 import org.eclipse.jetty.server.handler.InetAccessHandler;
 import org.eclipse.jetty.servlet.DefaultServlet;
 import org.eclipse.jetty.servlet.FilterHolder;
@@ -13,6 +19,7 @@ import org.eclipse.jetty.servlet.ServletContextHandler;
 import org.eclipse.jetty.servlet.ServletHolder;
 import org.eclipse.jetty.servlets.CrossOriginFilter;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
+import org.eclipse.jetty.websocket.server.config.JettyWebSocketServletContainerInitializer;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.servlet.ServletContainer;
 import org.qortal.api.resource.AnnotationPostProcessor;
@@ -20,37 +27,64 @@ import org.qortal.api.resource.ApiDefinition;
 import org.qortal.api.websocket.*;
 import org.qortal.network.Network;
 import org.qortal.settings.Settings;
+import org.qortal.utils.SslUtils;
 
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
 import javax.servlet.http.HttpServletRequest;
+import java.io.FileInputStream;
 import java.io.InputStream;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.security.Security;
+import java.util.List;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 import java.security.KeyStore;
 import java.security.SecureRandom;
 
 public class ApiService {
 
+	private static final Logger LOGGER = LogManager.getLogger(ApiService.class);
 	private static ApiService instance;
 
-	private final ResourceConfig config;
+	/** Ensures stop/start/restart are atomic and no concurrent lifecycle changes. */
+	private final Object lifecycleLock = new Object();
+
 	private Server server;
 	private ApiKey apiKey;
+
+	/**
+	 * Creates a fresh ResourceConfig for each server lifecycle or inspection.
+	 * Jersey locks (immutabilizes) a ResourceConfig when used by a ServletContainer,
+	 * so we must not reuse the same instance across restarts.
+	 */
+	private static ResourceConfig createResourceConfig() {
+		ResourceConfig config = new ResourceConfig();
+		config.packages("org.qortal.api.resource", "org.qortal.api.restricted.resource");
+		config.register(org.glassfish.jersey.media.multipart.MultiPartFeature.class);
+		config.register(org.qortal.api.model.ConnectedPeerJacksonWriter.class, 10000);
+		config.register(OpenApiResource.class);
+		config.register(ApiDefinition.class);
+		config.register(AnnotationPostProcessor.class);
+		return config;
+	}
+
+	/** Add BouncyCastle providers once per JVM; repeated adds would clutter the provider list. */
+	private static void ensureProvidersAdded() {
+		if (Security.getProvider("BC") == null) {
+			Security.addProvider(new org.bouncycastle.jce.provider.BouncyCastleProvider());
+		}
+		if (Security.getProvider("BCJSSE") == null) {
+			Security.addProvider(new org.bouncycastle.jsse.provider.BouncyCastleJsseProvider());
+		}
+	}
 
 	public static final String API_VERSION_HEADER = "X-API-VERSION";
 
 	private ApiService() {
-		this.config = new ResourceConfig();
-		this.config.packages("org.qortal.api.resource", "org.qortal.api.restricted.resource");
-		this.config.register(org.glassfish.jersey.media.multipart.MultiPartFeature.class);
-		this.config.register(org.qortal.api.model.ConnectedPeerJacksonWriter.class, 10000);  // High priority for ConnectedPeer endpoints
-		this.config.register(OpenApiResource.class);
-		this.config.register(ApiDefinition.class);
-		this.config.register(AnnotationPostProcessor.class);
 	}
 
 	public static ApiService getInstance() {
@@ -60,8 +94,9 @@ public class ApiService {
 		return instance;
 	}
 
+	/** Returns resource classes; uses a fresh config so no long-lived reference to a locked config is retained. */
 	public Iterable<Class<?>> getResources() {
-		return this.config.getClasses();
+		return List.copyOf(createResourceConfig().getClasses());
 	}
 
 	public void setApiKey(ApiKey apiKey) {
@@ -74,55 +109,85 @@ public class ApiService {
 
 
 	public void start() {
-		try {
-			// Create API server
+		synchronized (lifecycleLock) {
+			startInternal();
+		}
+	}
 
-			// SSL support if requested
+	private void startInternal() {
+		//System.setProperty("javax.net.debug", "ssl,handshake");
+		try {
+			ensureProvidersAdded();
+
 			String keystorePathname = Settings.getInstance().getSslKeystorePathname();
 			String keystorePassword = Settings.getInstance().getSslKeystorePassword();
 
 			if (keystorePathname != null && keystorePassword != null) {
-				// SSL version
-				if (!Files.isReadable(Path.of(keystorePathname)))
-					throw new RuntimeException("Failed to start SSL API due to broken keystore");
-
-				// BouncyCastle-specific SSLContext build
-				SSLContext sslContext = SSLContext.getInstance("TLSv1.3", "BCJSSE");
-				KeyManagerFactory keyManagerFactory = KeyManagerFactory.getInstance("PKIX", "BCJSSE");
-
-				KeyStore keyStore = KeyStore.getInstance(KeyStore.getDefaultType(), "BC");
-
-				try (InputStream keystoreStream = Files.newInputStream(Paths.get(keystorePathname))) {
-					keyStore.load(keystoreStream, keystorePassword.toCharArray());
+				if (!Files.isReadable(Path.of(keystorePathname))) {
+					SslUtils.generateSsl();
 				}
 
-				keyManagerFactory.init(keyStore, keystorePassword.toCharArray());
-				sslContext.init(keyManagerFactory.getKeyManagers(), null, new SecureRandom());
-
+				// 2. SSL Context Factory
 				SslContextFactory.Server sslContextFactory = new SslContextFactory.Server();
-				sslContextFactory.setSslContext(sslContext);
+				sslContextFactory.setKeyStorePath(keystorePathname);
+				sslContextFactory.setKeyStorePassword(keystorePassword);
+				sslContextFactory.setKeyStoreType("PKCS12");
+				sslContextFactory.setKeyStoreProvider("BC");
+
+				// Use SunJSSE for ALPN support
+				sslContextFactory.setProvider("SunJSSE");
+				sslContextFactory.setProtocol("TLS");
+
+				// Disable Hostname Verification (Fixes "localhost" ALPN issues)
+				sslContextFactory.setEndpointIdentificationAlgorithm(null);
+
+				// We explicitly tell the server: "You MUST use a cipher that allows HTTP/2"
+				sslContextFactory.setIncludeCipherSuites("TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256");
+				// HTTP/2 strict cipher compliance
+				sslContextFactory.setCipherComparator(HTTP2Cipher.COMPARATOR);
+				sslContextFactory.setUseCipherSuitesOrder(true);
 
 				this.server = new Server();
 
+				// 3. HTTP Configuration
 				HttpConfiguration httpConfig = new HttpConfiguration();
 				httpConfig.setSecureScheme("https");
 				httpConfig.setSecurePort(Settings.getInstance().getApiPort());
 
-				SecureRequestCustomizer src = new SecureRequestCustomizer();
-				httpConfig.addCustomizer(src);
+				// HTTPS Config (adds Strict Transport Security, etc.)
+				HttpConfiguration httpsConfig = new HttpConfiguration(httpConfig);
+				httpsConfig.addCustomizer(new SecureRequestCustomizer());
 
-				HttpConnectionFactory httpConnectionFactory = new HttpConnectionFactory(httpConfig);
-				SslConnectionFactory sslConnectionFactory = new SslConnectionFactory(sslContextFactory, HttpVersion.HTTP_1_1.asString());
+				// 4. Connection Factories
+				// HTTP/1.1 (The Workhorse)
+				HttpConnectionFactory http1 = new HttpConnectionFactory(httpsConfig);
 
-				ServerConnector portUnifiedConnector = new ServerConnector(this.server,
-						new DetectorConnectionFactory(sslConnectionFactory),
-						httpConnectionFactory);
-				portUnifiedConnector.setHost(Network.getInstance().getBindAddress());
-				portUnifiedConnector.setPort(Settings.getInstance().getApiPort());
+				// HTTP/2 (The Goal)
+				HTTP2ServerConnectionFactory h2 = new HTTP2ServerConnectionFactory(httpsConfig);
 
-				this.server.addConnector(portUnifiedConnector);
+				// ALPN (The Negotiator: "h2" or "http/1.1"?)
+				ALPNServerConnectionFactory alpn = new ALPNServerConnectionFactory();
+				alpn.setDefaultProtocol(http1.getProtocol());
+
+				// SSL (The Encryptor)
+				// It hands off to ALPN once decryption is done
+				SslConnectionFactory ssl = new SslConnectionFactory(sslContextFactory, alpn.getProtocol());
+
+				// Peeks at the first bytes. - If TLS -> sends to 'ssl';  Plain -> sends to 'http1'.
+				OptionalSslConnectionFactory optionalSsl = new OptionalSslConnectionFactory(ssl, http1.getProtocol());
+
+				// 5. The Unified Connector
+				// Order: Detector -> SSL -> ALPN -> H2 -> HTTP1
+				ServerConnector sslConnector = new ServerConnector(this.server,
+						optionalSsl, ssl, alpn, h2, http1);
+
+				sslConnector.setPort(Settings.getInstance().getApiPort());
+				sslConnector.setHost(Network.getInstance().getBindAddress());
+
+				this.server.addConnector(sslConnector);
+
 			} else {
-				// Non-SSL
+				// Non-SSL Mode
 				InetAddress bindAddr = InetAddress.getByName(Network.getInstance().getBindAddress());
 				InetSocketAddress endpoint = new InetSocketAddress(bindAddr, Settings.getInstance().getApiPort());
 				this.server = new Server(endpoint);
@@ -164,8 +229,8 @@ public class ApiService {
 			corsFilterHolder.setInitParameter(CrossOriginFilter.CHAIN_PREFLIGHT_PARAM, "false");
 			context.addFilter(corsFilterHolder, "/*", null);
 
-			// API servlet
-			ServletContainer container = new ServletContainer(this.config);
+			// API servlet - fresh config per server lifecycle (Jersey locks config on use)
+			ServletContainer container = new ServletContainer(createResourceConfig());
 			ServletHolder apiServlet = new ServletHolder(container);
 			apiServlet.setInitOrder(1);
 			context.addServlet(apiServlet, "/*");
@@ -194,6 +259,7 @@ public class ApiService {
 				rewriteHandler.addRule(new RedirectPatternRule("/api-documentation", "/api-documentation/")); // redirect to add trailing slash if missing
 			}
 
+			JettyWebSocketServletContainerInitializer.configure(context, null);
 			context.addServlet(AdminStatusWebSocket.class, "/websockets/admin/status");
 			context.addServlet(BlocksWebSocket.class, "/websockets/blocks");
 			context.addServlet(DataMonitorSocket.class, "/websockets/datamonitor");
@@ -211,19 +277,72 @@ public class ApiService {
 			this.server.start();
 		} catch (Exception e) {
 			// Failed to start
+			System.err.println("Failed to start API");
+			e.printStackTrace();
 			throw new RuntimeException("Failed to start API", e);
+
 		}
 	}
 
 	public void stop() {
-		try {
-			// Stop server
-			this.server.stop();
-		} catch (Exception e) {
-			// Failed to stop
+		synchronized (lifecycleLock) {
+			stopInternal();
 		}
+	}
 
+	/**
+	 * Stop the server and wait for it to fully release the port using Jetty's lifecycle listener.
+	 * Must be called with lifecycleLock held.
+	 */
+	private void stopInternal() {
+		if (this.server == null) {
+			return;
+		}
+		Server s = this.server;
 		this.server = null;
+		try {
+			CountDownLatch latch = new CountDownLatch(1);
+			s.addEventListener(new LifeCycle.Listener() {
+				@Override
+				public void lifeCycleStopped(LifeCycle event) {
+					latch.countDown();
+				}
+			});
+			s.stop();
+			if (!latch.await(15, TimeUnit.SECONDS)) {
+				LOGGER.warn("API server did not stop within 15 seconds");
+			}
+		} catch (Exception e) {
+			LOGGER.error("Failed to stop API server: {}", e.getMessage(), e);
+		}
+	}
+
+	/**
+	 * Restart the API service to reload SSL certificates or other configuration.
+	 * If the new server fails to start, attempts to bring the old server back up so the API is not permanently down.
+	 */
+	public void restart() throws Exception {
+		synchronized (lifecycleLock) {
+			Server oldServer = this.server;
+			try {
+				stopInternal();
+				startInternal();
+			} catch (Exception e) {
+				LOGGER.error("Restart failed, attempting recovery", e);
+				if (oldServer != null && oldServer.isStopped()) {
+					try {
+						oldServer.start();
+						this.server = oldServer;
+						LOGGER.info("Recovery successful: previous API server restored");
+					} catch (Exception ex) {
+						LOGGER.error("Recovery failed", ex);
+						throw new RuntimeException("Restart and recovery failed", e);
+					}
+				} else {
+					throw new RuntimeException("Restart failed", e);
+				}
+			}
+		}
 	}
 
 	public static int getApiVersion(HttpServletRequest request) {
